--- a/web/static/style.css
+++ b/web/static/style.css
@@ -1,6 +1,19 @@
-body  {
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
+body {
+  font-family: 'Poppins', sans-serif;
   min-height:100%;
 	margin: 0;
+}
+
+a, a:hover, a:focus {
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+p {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
 }
 
 .center {
@@ -16,12 +29,12 @@ body  {
   flex-direction: row;
 }
 
-.map {
+.content {
   height: 100%;
 	width: 100%;
 }
 
-.details {
+.sidebar {
 	display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -31,10 +44,38 @@ body  {
   flex-direction: column;
 
   width: 400px;
-  padding: 10px 10px;
-  background: #f8f9fc;
+  background: #0b3948;
 }
 
-.card {
-  margin: 0 0 20px 0;
+.sidebar h1, .sidebar h2, .sidebar h3, .sidebar h4, .sidebar h5, .sidebar h6, .sidebar p {
+  margin: 0;
+  padding: 0;
+}
+
+.sidecar p {
+  font-size: 0.8em;
+  font-weight: 200;
+}
+
+.sidebar-header {
+  padding: 30px 10px;
+  background: #5158bb;
+}
+
+.sidebar-section-header {
+  padding: 30px 15px 10px 15px;
+}
+
+.sidebar-content {
+  padding: 0 15px 15px 15px;
+  /*background: #416165;*/
+}
+
+.sidebar-bottom {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 320px;
+  text-align: center;
+  font-size: 0.8em;
 }
