--- a/web/static/style.css
+++ b/web/static/style.css
@@ -1,8 +1,11 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
+html, body {
+  height: 100%;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
-  min-height:100%;
 	margin: 0;
 }
 
@@ -23,28 +26,19 @@ p {
   align-items: center;
 }
 
+/* Index */
 .main {
-  height: 100vh;
+  height: 100%;
   display: flex;
-  flex-direction: row;
 }
 
 .content {
-  height: 100%;
-	width: 100%;
+  flex: 1;
 }
 
 .sidebar {
-	display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display flex;
-  justify-content: flex-start;
-  flex-direction: column;
-
-  width: 400px;
-  background: #0b3948;
+  width: 370px;
+  background: #E9E9E9;
 }
 
 .sidebar h1, .sidebar h2, .sidebar h3, .sidebar h4, .sidebar h5, .sidebar h6, .sidebar p {
@@ -52,30 +46,92 @@ p {
   padding: 0;
 }
 
-.sidecar p {
+.sidebar p {
   font-size: 0.8em;
   font-weight: 200;
 }
 
 .sidebar-header {
-  padding: 30px 10px;
-  background: #5158bb;
+  height: 170px;
+  padding: 15px 10px;
+  background: #88BBd6;
+  display: flex;
+  justify-content: space-between;
+}
+
+.sidebar-header button {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  color: white;
+}
+
+.sidebar-scroll-container {
+  overflow-y: auto;
+  max-height: calc(100% - 170px - 40px);
 }
 
 .sidebar-section-header {
-  padding: 30px 15px 10px 15px;
+  padding: 15px 15px 10px 15px;
+  color: #717c89;
 }
 
 .sidebar-content {
-  padding: 0 15px 15px 15px;
-  /*background: #416165;*/
+  margin: 10px 15px;
+  padding: 10px 15px 10px 15px;
+  border-radius: 2px;
+  background: #717c89;
+  display: flex;
+  align-items: center;
 }
 
 .sidebar-bottom {
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  width: 320px;
+  height: 40px;
+  padding: 10px 0;
   text-align: center;
-  font-size: 0.8em;
+  color: #717c89;
+}
+
+.sidebar-bottom a {
+  color: #88BBd6;
+}
+
+/* Checkin */
+.checkin-content {
+  margin: 10px 15px;
+  padding: 10px 15px 10px 15px;
+  background: #717c89;
+  border-radius: 2px;
+}
+
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 10px;
+  }
+
+  .main {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    width: 100%;
+    height: 64;
+  }
+
+  .sidebar-header {
+    height: 64px;
+  }
+
+  .sidebar-scroll-container {
+    height: 0px;
+  }
+
+  .sidebar-bottom {
+    display: none;
+  }
+
+  .content {
+    height: 100%;
+  }
 }
