--- a/web/templates/checkin.html
+++ b/web/templates/checkin.html
@@ -5,6 +5,11 @@
     <h3> Checkin </h3>
 
     <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" id="name" name="name">
+    </div>
+
+    <div class="form-group">
       <label for="lat">Latitude</label>
       <input type="text" class="form-control" id="lat" name="lat">
     </div>
@@ -40,10 +45,22 @@
         navigator.geolocation.getCurrentPosition(function(position) {
           document.getElementById("lat").value = position.coords.latitude;
           document.getElementById("lng").value = position.coords.longitude;
-          console.log(position)
+          reverseGeocode(position.coords.latitude, position.coords.longitude)
         });
       } else {
         console.log("Browser does not support geolocation")
+      }
+
+      function reverseGeocode(lat, lng) {
+        const Http = new XMLHttpRequest();
+        const url='https://nominatim.openstreetmap.org/reverse?lat=57.693521&lon=11.923022&format=json';
+        Http.open("GET", url);
+        Http.send();
+
+        Http.onreadystatechange = (e) => {
+          var place = JSON.parse(Http.responseText);
+          document.getElementById("name").value = place.address.county
+        }
       }
   </script>
 
