--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -27,6 +27,8 @@
 
     <!--FontAwesome -->
     <script src="https://kit.fontawesome.com/72383cd953.js"></script>
+
+    <title>Pipen Cyklar Fel</title>
   </head>
 
   <body>
