--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -113,8 +113,8 @@
   <!-- Mobile Menu -->
   function hamburgerPushed() {
     var element = document.getElementById("sidebar-scroll-container")
-    console.log("update")
     element.classList.toggle("sidebar-scroll-container")
+    element.classList.toggle("sidebar-scroll-container-expanded")
   }
 </script>
 {{ end }}
